# copilot-chef

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.base.json  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.web.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release-client.yml  release-server.yml
docs/: TEST.md  architecture.md  browser-ready-ui-lan-architecture-plan.md  burkeholland-max-skills-and-tools-1-2-2.md  client-server-install-and-usage.md  copilot-chef-config.md  copilot-chef-plan.md  copilot-chef-prototype.jsx  copilot-chef-style-guide.md  copilot-sdk-tool-test-plan.md  developer-guide.md  pa-machine-api.md  pa-machine-runbook.md  release-guide.md
docs/archive/: README.md
docs/plans/: copilot-chef-calendar-migration.md  copilot-chef-calendar.jsx  copilot-chef-grocery-migration.md  copilot-chef-grocery.jsx  copilot-chef-service-and-api-upgrade-plan.md  copilot-sdk-full-surface-upgrade.md  meal-plan-undo-redo.md  modal-portal-migration.md  multi-state.md  pa-copilot-chef-skill-tool-upgrade-plan.md  recipe-book-plan.md  server-client-architecture-migration-v2.md  settings-page-spec.md
docs/research/: future-architecture.md
memories/repo/: npm-lockfile-compat.md  (+1 more)
prisma/: schema.prisma
scripts/: ensure-electron-install.mjs
src/client/src-tauri/: Cargo.toml  tauri.conf.json
src/client/src-tauri/icons/: icon.icns
src/client/src-tauri/src/: lib.rs  main.rs
(+404 files in other folders)
