[package]
name = "copilot-chef-client"
version = "0.1.0"
description = "Copilot Chef desktop client"
authors = ["Copilot Chef"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "copilot_chef_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.0", features = [] }

[dependencies]
tauri = { version = "^2.0", features = [] }
tauri-plugin-updater = "^2.0"
tauri-plugin-process = "^2.0"
tauri-plugin-shell = "^2.0"
tauri-plugin-fs = "^2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
